--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar">
       <div class="logo">
         <img src="assets/logo.jpeg"
-        alt="Shoppingo">
+        alt="logo">
     </div>
       <ul class="nav-links">
         <li><a href="#home">होम</a></li>
@@ -96,7 +96,7 @@
 
   <div class="product-container">
     <div class="product-item">
-        <img src="assets/electronics.jpg" alt="electronics">
+        <img src="https://shoppinghub25.github.io/shopping/assets/electronics.jpg" alt="electronics">
         <h3>इलेक्ट्रॉनिक्स</h3>
         <a href="https://fkrtt.in/en/YT4xpQ" target="_blank">
 
