--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="assets/logo.jpeg"
+        <img src="https://shoppinghub25.github.io/shopping/assets/logo.jpeg"
         alt="logo">
     </div>
       <ul class="nav-links">
@@ -52,11 +52,12 @@
       style="display: flex; gap:
       20px; justify-content: center;">        
               <a href="#">
-                <img src="assets/cart.jpeg" alt="Cart" style="width: 40px; height: 40px;"><bar>
+                <img src="https://shoppinghub25.github.io/shopping/assets/cart.jpeg" alt="Cart" style="width: 40px; height: 40px;"><bar>
                   <span>Cart</span></a></div>
               <div style="text-align: center;">
               <a href="#">
-                <img src="assets/profile.jpeg" alt="Profile" style="width: 40px; height: 40px;"><br>
+                <img src="https://shoppinghub25.github.io/shopping/assets/profile.jpeg" alt="Profile" style="width: 40px; height: 40px;"><br>
+             
                 <span>profile</span>
               </a>
               </div>
@@ -71,13 +72,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/banner1.jpg" class="d-block w-100" alt="Slide 1">
+        <img src="https://shoppinghub25.github.io/shopping/assets/banner1.jpg" class="d-block w-100" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="assets/banner2.jpeg" class="d-block w-100" alt="Slide 2">
+        <img src="https://shoppinghub25.github.io/shopping/assets/banner2.jpeg" class="d-block w-100" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src="assets/banner3 (2).jpeg" class="d-block w-100" alt="Slide 3">
+        <img src="https://shoppinghub25.github.io/shopping/assets/banner3 (2).jpeg" class="d-block w-100" alt="Slide 3">
       </div>
     </div>
   
@@ -109,7 +110,7 @@
     </div>
 
     <div class="product-item">
-        <img src="assets/fashion.jpg" alt="fashion">
+        <img src="https://shoppinghub25.github.io/shopping/assets/fashion.jpg" alt="fashion">
         <h3>फैशन</h3>
         <a href="https://ajjio.xyz/en/yuMmN0" target="_blank">
         <div class="button-group">
@@ -120,7 +121,7 @@
     </div>
 
     <div class="product-item">
-        <img src="assets/furniture.jpg" alt="furniture">
+        <img src="https://shoppinghub25.github.io/shopping/assets/furniture.jpg" alt="furniture">
         <h3>फर्नीचर</h3>
         <a href="https://myntr.cc/en/k0fvri" target="_blank">
         <div class="button-group">
