--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <img src="assets/banner1.jpg" class="d-block w-100" alt="Slide 1">
       </div>
       <div class="carousel-item">
-        <img src="assets/banner2.jpeg" class="d-block w-100" alt="Slide 2">
+        <img src="blob:https://github.com/4cf834d2-ebf9-482c-a43c-475e96b8a8a1/assets/banner2.jpeg" class="d-block w-100" alt="Slide 2">
       </div>
       <div class="carousel-item">
-        <img src=assets/banner3 (2).jpeg" class="d-block w-100" alt="Slide 3">
+        <img src="assets/banner3 (2).jpeg" class="d-block w-100" alt="Slide 3">
       </div>
     </div>
   
@@ -110,7 +110,7 @@
     </div>
 
     <div class="product-item">
-        <img src="fashion.jpg" alt="fashion">
+        <img src="assets/fashion.jpg" alt="fashion">
         <h3>फैशन</h3>
         <a href="https://ajjio.xyz/en/yuMmN0" target="_blank">
         <div class="button-group">
