--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="assets/banner1.jpg" class="d-block w-100" alt="Slide 1">
+        <img src="https://shoppinghub25.github.io/shopping/assets/banner1.jpg" class="d-block w-100" alt="Slide 1">
       </div>
       <div class="carousel-item">
         <img src="assets/banner2.jpeg" class="d-block w-100" alt="Slide 2">
